--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container-fluid mb-3">
-    <a class="navbar-brand .navbar-text display-5 text-black font-weight-bold fw-bold" href="/">Adolscent Sleep Tracker</a>
+    <a class="navbar-brand .navbar-text display-5 text-black font-weight-bold fw-bold" href="/">Movie Rating App</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,6 +8,9 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 display-8 text-black fw-bold" style="margin: 0% 37%;"> 
         <li class="nav-item">
           <a class="nav-link" href="/sleeps">Sleep</a>
+        </li>
+        <li class='nav-item'>
+          <a class="nav-link" href="/aboutus">About Us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/sleep/new">New Sleep</a>
@@ -20,10 +23,11 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/myprofile">Update Contact Information</a></li>
+            <li><a class="dropdown-item" href="/movie/new">Log New Movie</a></li>
+            <li><a class="dropdown-item" href="/movies">View Movies</a></li>
           </ul>
         </li>
         <li>
