--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,12 +6,9 @@
 {% block body %}
     <div style="background-color: #9bbeeb;" >  
 
-      <img src="/static/CloudsPNG.png" class="rounded float-end" width = "200" hieght= "200" alt="...">
-      <img src="/static/CloudsPNG.png" class="rounded float-end" width = "200" hieght= "200" alt="...">
-
-      <img src="/static/CloudsPNG.png" class="rounded float-start" width = "200" hieght= "200" alt="...">
+      <img src="/static/filmstrip.png" class="rounded float-end" width = "200" hieght= "200" alt="...">
     
-    <img src="/static/CloudsPNG.png" class="rounded float-start" width = "200" hieght= "200" alt="...">
+    <img src="/static/filmstrip.png" class="rounded float-start" width = "200" hieght= "200" alt="...">
     
     <h1 class="display-4 text-center ">Welcome!</h1>
     
@@ -24,26 +21,22 @@
    
 
 
-    <h1 class="display-4 text-center"> Adolescent sleep tracker </h1>
+    <h1 class="display-4 text-center"> Movie Rating App</h1>
     <p></p>
     <p></p>
 
     <div class="container text-left display-7 text-center border border-5 whtie" >
         <div class="row">
         <div class="col">
-          <b> Our Misson statement:</b>
-          <p>A sleep tracker for students made by students, specialized for the patterns of students going from childhood to adolescence and bringing awareness to the overall severe effect of sleep deprivation on young brains. Also, draw attention to this problem so teachers and parents can look for signs in their students <p> </p></p>
+          <b>Our Mission statement:</b>
+          <p>We aim to create a movie rating website that highlights queer BIPOC representation<p> </p></p>
         </div>
     </div>
     </div>
 
-    <img src="/static/CloudsPNG.png" class="rounded float-end" width = "200" hieght= "200" alt="...">
-    <img src="/static/CloudsPNG.png" class="rounded float-end" width = "200" hieght= "200" alt="...">
 
 
-     
-    <img src="/static/CloudsPNG.png" class="rounded float-start" width = "200" hieght= "200" alt="...">
-    <img src="/static/CloudsPNG.png" class="rounded float-start" width = "200" hieght= "200" alt="...">
+
 
           
      
@@ -51,13 +44,10 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
         <div class="carousel-item active">
-        <img src="/static/homeimg.jpg" class="d-block w-100" alt="..." width="400" height="500">
+        <img src="/static/image1.jpg" class="d-block w-100" alt="..." width="400" height="500">
       </div>
       <div class="carousel-item">
-        <img src="/static/homeimg2.jpg" class="d-block w-100" alt="..."  width="400" height="500" >
-      </div>
-      <div class="carousel-item">
-        <img src="/static/homeimg3.jpg" class="d-block w-100" alt="..." width="400" height="500">
+        <img src="/static/image2.png" class="d-block w-100" alt="..."  width="400" height="500" >
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
